--- a/config.cfg
+++ b/config.cfg
@@ -1,5 +1,6 @@
 [SLICE_MGR]
 USE_SONATA=False
+SONATA_SP_HOSTNAME=pre-int-sp-ath.5gtango.eu
 SONATA_SP_IP=10.1.7.21    
 SONATA_SP_USER=sonata
 SONATA_SP_PWD=1234
