UPDATED: nsi_manager (create and isntantie in one function), readme, dockerfile

--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,7 @@
 [SLICE_MGR]
-USE_SONATA=False
-SONATA_SP_HOSTNAME=pre-int-sp-ath.5gtango.eu
-SONATA_SP_IP=10.1.7.21    
+USE_SONATA=True
+SONATA_SP_IP=127.0.0.1    
 SONATA_SP_USER=sonata
 SONATA_SP_PWD=1234
+SONATA_GTK=son-gtkapi
+SONATA_REPO=tng-rep
