--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,7 @@
 [SLICE_MGR]
-USE_SONATA=True
+USE_SONATA=False
 SONATA_SP_IP=127.0.0.1    
 SONATA_SP_USER=sonata
 SONATA_SP_PWD=1234
-SONATA_GTK=son-gtkapi
+SONATA_GTK=son-gtksrv
 SONATA_REPO=tng-rep
