Improving code by using modularization in some functions like: createNSI(...), getListNetServices(), etc.

--- a/config.cfg
+++ b/config.cfg
@@ -1,6 +1,16 @@
 [SLICE_MGR]
 USE_SONATA=False
+SLICE_MGR_PORT=5998
+
+[SONATA_COMPONENTS]
 SONATA_GTK=son-gtksrv
-SONATA_REPO=tng-rep
+SONATA_GTK_PORT=5300
+SONATA_REP=tng-rep
+SONATA_REP_PORT=4012
+SONATA_CAT=tng-cat
+SONATA_CAT_PORT=4011
+
+
 #SONATA_GTK=pre-int-sp-ath.5gtango.eu
 #SONATA_REPO=pre-int-sp-ath.5gtango.eu
+#SONATA_CAT=pre-int-sp-ath.5gtango.eu
