updated structure of tests folder, jenkinsfile and config

--- a/config.cfg
+++ b/config.cfg
@@ -3,8 +3,8 @@ USE_SONATA=False
 SLICE_MGR_PORT=5998
 
 [SONATA_COMPONENTS]
-SONATA_GTK=son-gtksrv
-SONATA_GTK_PORT=5300
+SONATA_GTK=tng-gtksrv
+SONATA_GTK_PORT=5300  #5350???
 SONATA_REP=tng-rep
 SONATA_REP_PORT=4012
 SONATA_CAT=tng-cat
