INTEGRATING with the SP (tng-gtk-sp)

--- a/config.cfg
+++ b/config.cfg
@@ -1,10 +1,10 @@
 [SLICE_MGR]
-USE_SONATA=False
+USE_SONATA=True
 SLICE_MGR_PORT=5998
 
 [SONATA_COMPONENTS]
-SONATA_GTK=tng-gtksrv
-SONATA_GTK_PORT=5300  #5350???
+SONATA_GTK=tng-gtk-sp    #tng-gtksrv
+SONATA_GTK_PORT=5000         #5300  #5350???
 SONATA_REP=tng-rep
 SONATA_REP_PORT=4012
 SONATA_CAT=tng-cat
