--- a/config.cfg
+++ b/config.cfg
@@ -3,8 +3,10 @@ USE_SONATA=True
 SLICE_MGR_PORT=5998
 
 [SONATA_COMPONENTS]
-SONATA_GTK=tng-gtk-sp    #tng-gtksrv
-SONATA_GTK_PORT=5000         #5300  #5350???
+SONATA_GTK_COMMON=tng-gtk-common
+SONATA_GTK_COMMON_PORT=5000
+SONATA_GTK_SP=tng-gtk-sp
+SONATA_GTK_SP_PORT=5000
 SONATA_REP=tng-rep
 SONATA_REP_PORT=4012
 SONATA_CAT=tng-cat
