--- a/config.cfg
+++ b/config.cfg
@@ -6,8 +6,8 @@ SLICE_MGR_PORT=5998
 #TODO: solve "id:None" error to use the inner "tng-gtk-sp:5000" instead of "pre-int-sp-ath.5gtango.eu:32002"
 SONATA_GTK_COMMON=tng-gtk-common
 SONATA_GTK_COMMON_PORT=5000
-SONATA_GTK_SP=pre-int-sp-ath.5gtango.eu
-SONATA_GTK_SP_PORT=32002
+SONATA_GTK_SP=tng-gtk-sp
+SONATA_GTK_SP_PORT=5000
 SONATA_REP=tng-rep
 SONATA_REP_PORT=4012
 SONATA_CAT=tng-cat
