Connection to the IA-MQRabbit broker to get VIM information

--- a/config.cfg
+++ b/config.cfg
@@ -11,3 +11,6 @@ SONATA_REP=tng-rep
 SONATA_REP_PORT=4012
 SONATA_CAT=tng-cat
 SONATA_CAT_PORT=4011
+SONATA_IA_BROKER = son-kernel
+SONATA_IA_BROKER_PORT = 5672
+SONATA_IA_BROKER_URI = amqp://guest:guest@broker:5672/%2F
